We will solve the runtime issue later.  The values I gave for u_0, etc., were completely arbitrary so they are probably not realistic values, thus causing something to blow up.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -486,7 +486,6 @@
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
-    "        \n",
     "\n",
     "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
     "            Beta_mf=[]\n",
@@ -526,8 +525,6 @@
     "        for j in self.control_indices:\n",
     "            Beta_mf, Beta_l = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
     "            alpha_mf, alpha_l = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
-    "\n",
-    "        \n",
     "        \n",
     "        return -1*self.Gamma*(self.gamma*(alpha_mf + np.dot(Beta_mf,u_s)) +\\\n",
     "                              (1-self.gamma)*(alpha_l + np.dot(Beta_l,u_s)))\n",
@@ -1184,12 +1181,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0.72300973]\n",
+      "[1.44601946]\n",
+      "[2.16902919]\n",
+      "[2.89203892]\n",
+      "[3.61504865]\n",
+      "[4.33805838]\n",
+      "[5.06106811]\n",
+      "[5.78407784]\n",
+      "[6.50708757]\n",
+      "[7.2300973]\n",
+      "[197.05363111]\n",
+      "[386.87716491]\n",
+      "[576.70069871]\n",
+      "[766.52423251]\n",
+      "[956.34776631]\n",
+      "[1146.17130012]\n",
+      "[1335.99483392]\n",
+      "[1525.81836772]\n",
+      "[1715.64190152]\n",
+      "[1905.46543532]\n",
+      "[2.26876154e+243]\n",
+      "[4.53752308e+243]\n",
+      "[6.80628463e+243]\n",
+      "[9.07504617e+243]\n",
+      "[1.13438077e+244]\n",
+      "[1.36125693e+244]\n",
+      "[1.58813308e+244]\n",
+      "[1.81500923e+244]\n",
+      "[2.04188539e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1198,7 +1252,44 @@
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:243: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n",
+      "ode.py:107: RuntimeWarning: invalid value encountered in add\n",
+      "  R = abs((-5.0*k1+6.0*k2+8.0*k3-9.0*k4)*hStep)/72.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n",
+      "[2.26876154e+244]\n"
      ]
     }
    ],
@@ -1208,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1219,7 +1310,7 @@
        "array([0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1250,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1261,7 +1352,7 @@
        "array([0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1296,11 +1387,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[2.31840265]\n",
+      "[4.6368053]\n",
+      "[6.95520795]\n",
+      "[9.2736106]\n",
+      "[11.59201325]\n",
+      "[13.9104159]\n",
+      "[16.22881855]\n",
+      "[18.5472212]\n",
+      "[20.86562385]\n",
+      "[23.1840265]\n",
+      "[9311441.76513125]\n",
+      "[18622860.34623598]\n",
+      "[27934278.92734073]\n",
+      "[37245697.50844546]\n",
+      "[46557116.08955021]\n",
+      "[55868534.67065497]\n",
+      "[65179953.25175972]\n",
+      "[74491371.83286445]\n",
+      "[83802790.41396917]\n",
+      "[93114208.99507393]\n",
+      "[2.09717879e+243]\n",
+      "[4.19435758e+243]\n",
+      "[6.29153637e+243]\n",
+      "[8.38871516e+243]\n",
+      "[1.04858939e+244]\n",
+      "[1.25830727e+244]\n",
+      "[1.46802515e+244]\n",
+      "[1.67774303e+244]\n",
+      "[1.88746091e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1310,6 +1779,120 @@
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[0.]\n",
+      "[2.31840265]\n",
+      "[4.6368053]\n",
+      "[6.95520795]\n",
+      "[9.2736106]\n",
+      "[11.59201325]\n",
+      "[13.9104159]\n",
+      "[16.22881855]\n",
+      "[18.5472212]\n",
+      "[20.86562385]\n",
+      "[23.1840265]\n",
+      "[9311441.76513125]\n",
+      "[18622860.34623598]\n",
+      "[27934278.92734073]\n",
+      "[37245697.50844546]\n",
+      "[46557116.08955021]\n",
+      "[55868534.67065497]\n",
+      "[65179953.25175972]\n",
+      "[74491371.83286445]\n",
+      "[83802790.41396917]\n",
+      "[93114208.99507393]\n",
+      "[2.09717879e+243]\n",
+      "[4.19435758e+243]\n",
+      "[6.29153637e+243]\n",
+      "[8.38871516e+243]\n",
+      "[1.04858939e+244]\n",
+      "[1.25830727e+244]\n",
+      "[1.46802515e+244]\n",
+      "[1.67774303e+244]\n",
+      "[1.88746091e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n",
+      "[2.09717879e+244]\n"
      ]
     }
    ],
