--- a/Mean_Field_Library_tests.ipynb
+++ b/Mean_Field_Library_tests.ipynb
@@ -110,10 +110,10 @@
     "        # Inputs for sliding window\n",
     "        self.t_0 = 0 \n",
     "        self.T =  2\n",
-    "        self.K=4\n",
+    "        self.K = 4\n",
     "\n",
-    "        self.t_terminal = 4\n",
-    "        self.n_s = 10\n",
+    "        self.t_terminal = 4 # terminate entire simulation of this agent\n",
+    "        self.n_s = 10 # number of steps inside of each bucket\n",
     "\n",
     "        self.validate_dimensions()\n",
     "        \n",
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -689,7 +689,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -883,7 +883,7 @@
        "[('1', 0), ('2', 2)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -905,7 +905,7 @@
        "array([0, 0, 0, 0])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -958,7 +958,7 @@
        "array([0])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,95 +984,163 @@
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:240: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n",
-      "ode.py:107: RuntimeWarning: invalid value encountered in add\n",
-      "  R = abs((-5.0*k1+6.0*k2+8.0*k3-9.0*k4)*hStep)/72.0\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
      ]
     }
    ],
    "source": [
-    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2, window = propagate_dynamics(myAgent2)"
+    "qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us, q_ls_dot_bar, p_ls_dot_bar, p_mfs_dot_bar, p_mfs_dot_bar, u_dot_bar, window = propagate_dynamics(myAgent2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confirmed that propagate_dynamics is for one window and does return all of the values for the entire window\n"
+     ]
     }
    ],
+   "source": [
+    "print 'confirmed that propagate_dynamics is for one window and does return all of the values for the entire window'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'q_ss2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-d3817b76137e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_ss2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'q_ss2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "len(q_ss2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_ss_bar2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "myAgent2.control_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print 'order is q_s, p_l, p_mf, u_s'\n",
+    "2+2+2+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(qpu_vec2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "qpu_vec2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "qp_vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.00000000e+000             nan 0.00000000e+000             nan\n",
-      " 0.00000000e+000             inf 2.26876154e+244] [ 0. nan] [ 0. nan] [ 0. inf] [1.84336875e+244] [array([0.        , 2.28402521]), array([ 0.        , 11.04933814]), array([0.00000000e+000, 4.17329291e+126]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan])] [array([0.        , 2.46597479]), array([ 0.        , -8.35686247]), array([ 0.00000000e+000, -4.17329291e+126]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan])] [array([0.        , 1.28402521]), array([ 0.        , 10.04933814]), array([0.00000000e+000, 4.17329291e+126]), array([ 0., inf]), array([ 0., inf]), array([ 0., inf]), array([ 0., inf])] [array([7.2300973]), array([1905.46543532]), array([2.26876154e+244]), array([2.26876154e+244]), array([2.26876154e+244]), array([2.26876154e+244]), array([2.26876154e+244])] (1, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2, window"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myAgent2.qp_rhs(0.0, qp_vec, state_dim=myAgent2.state_dim, Gamma = myAgent2.Gamma, u_0=u_0, q_mf=q_mf, u_mf=u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "([array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.])], [array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.])])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO:  these should not both work, right?  myAgent and myAgent2 have different state dimensions\n",
     "qpu_vec = np.array([0,0,0,0,0,0,0])\n",
@@ -1084,23 +1152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:257: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:240: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sync.synchronize()"
    ]
