In the process of adding a dictionary as an attribute to the blackboard to keep track of the bar values.  This additional dictionary is needed because these are not propagation values that can be shared between agents.  They are particular to the agent:         bar_dict is a dictionary which:             - keeps track of the implemented values for each agent.  These are the "bar" values from the numerical propagation.             - There is one set of bar values for each window, and these values in the dictionary get overwritten each time the numerical propagation is run.             - The dictionary maps objects of class agent, to a sub-dictionary:                 - keys: 'q_s_bar', 'q_s_dot_bar', etc.                 - values: values for the respective "bar" values

--- a/Mean_Field_Library_tests.ipynb
+++ b/Mean_Field_Library_tests.ipynb
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -984,7 +984,9 @@
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:240: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n",
+      "ode.py:107: RuntimeWarning: invalid value encountered in add\n",
+      "  R = abs((-5.0*k1+6.0*k2+8.0*k3-9.0*k4)*hStep)/72.0\n"
      ]
     }
    ],
@@ -1009,29 +1011,6 @@
    ],
    "source": [
     "print 'confirmed that propagate_dynamics is for one window and does return all of the values for the entire window'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'q_ss2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-d3817b76137e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_ss2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'q_ss2' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "len(q_ss2)"
    ]
   },
   {
