Finished saving dot bar values to bb

--- a/Mean_Field_Library_tests.ipynb
+++ b/Mean_Field_Library_tests.ipynb
@@ -558,8 +558,6 @@
     "        # q_rhs_H_mf is the derivative wrt each of the local variables, so it will return something of dimension state_dim\n",
     "        # q_rhs_H_mf_u returns the partial derivatives wrt each control, concatenated together\n",
     "        q_rhs_H_mf_u = self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)\n",
-    "        if np.shape(q_rhs_H_mf_u) != (len(self.control_indices), self.state_dim):\n",
-    "            import pdb; pdb.set_trace()\n",
     "        assert np.shape(q_rhs_H_mf_u)==(len(self.control_indices), self.state_dim) # first dimension should be number of controls, inner dimension should be state_dim\n",
     "        q_rhs_H_mf_u_summed = sum([q_rhs_H_mf_u[i]*u_s[i] for i in range(len(u_s))])\n",
     "        return self.q_rhs_H_mf_nou(q_mf, p_mf) + q_rhs_H_mf_u_summed\n",
@@ -980,8 +978,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:257: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:240: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:255: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:238: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n",
@@ -1002,46 +1000,45 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "confirmed that propagate_dynamics is for one window and does return all of the values for the entire window\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "print 'confirmed that propagate_dynamics is for one window and does return all of the values for the entire window'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "q_ss_bar2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "myAgent2.control_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "order is q_s, p_l, p_mf, u_s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print 'order is q_s, p_l, p_mf, u_s'\n",
     "2+2+2+1"
@@ -1049,77 +1046,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+000,             nan, 0.00000000e+000,             nan,\n",
+       "       0.00000000e+000,             inf, 2.26876154e+244])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "qpu_vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "len(qpu_vec2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "qpu_vec2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "qp_vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2, window"
+    "# print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2, window"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myAgent2.qp_rhs(0.0, qp_vec, state_dim=myAgent2.state_dim, Gamma = myAgent2.Gamma, u_0=u_0, q_mf=q_mf, u_mf=u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.])], [array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.])])\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:  these should not both work, right?  myAgent and myAgent2 have different state dimensions\n",
     "qpu_vec = np.array([0,0,0,0,0,0,0])\n",
@@ -1131,11 +1148,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/blackboard.py(77)save_bar_values()\n",
+      "-> print self.bar_dict\n",
+      "(Pdb) self.bar_dict\n",
+      "{<__main__.Agent instance at 0x104381c20>: {'u_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'q_ls_bars': [array([3.8743213]), array([3.8743213]), array([3.8743213]), array([3.8743213])], 'u_dot_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'q_ls_dot_bars': [array([5.8743213]), array([5.8743213]), array([5.8743213]), array([5.8743213])], 'p_l_dot_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'p_mfs_bars': [array([5.8743213]), array([5.8743213]), array([5.8743213]), array([5.8743213])], 'p_l_bars': [array([0.]), array([0.]), array([0.]), array([0.])]}}\n",
+      "(Pdb) print 'next, thing about how to retrieve the agent'\n",
+      "next, thing about how to retrieve the agent\n",
+      "(Pdb) c\n",
+      "{<__main__.Agent instance at 0x104381c20>: {'u_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'q_ls_bars': [array([3.8743213]), array([3.8743213]), array([3.8743213]), array([3.8743213])], 'u_dot_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'q_ls_dot_bars': [array([5.8743213]), array([5.8743213]), array([5.8743213]), array([5.8743213])], 'p_l_dot_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'p_mfs_bars': [array([5.8743213]), array([5.8743213]), array([5.8743213]), array([5.8743213])], 'p_l_bars': [array([0.]), array([0.]), array([0.]), array([0.])]}}\n",
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:255: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:238: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/blackboard.py(77)save_bar_values()\n",
+      "-> \n",
+      "(Pdb) c\n",
+      "{<__main__.Agent instance at 0x104381c20>: {'u_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'q_ls_bars': [array([3.8743213]), array([3.8743213]), array([3.8743213]), array([3.8743213])], 'u_dot_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'q_ls_dot_bars': [array([5.8743213]), array([5.8743213]), array([5.8743213]), array([5.8743213])], 'p_l_dot_bars': [array([0.]), array([0.]), array([0.]), array([0.])], 'p_mfs_bars': [array([5.8743213]), array([5.8743213]), array([5.8743213]), array([5.8743213])], 'p_l_bars': [array([0.]), array([0.]), array([0.]), array([0.])]}, <__main__.Agent2 instance at 0x104b804d0>: {'u_bars': [array([1.70395777e+244]), array([1.70395777e+244])], 'q_ls_bars': [array([ 0., nan]), array([ 0., nan])], 'u_dot_bars': [array([1.70395777e+244]), array([1.70395777e+244])], 'q_ls_dot_bars': [array([ 0., nan]), array([ 0., nan])], 'p_l_dot_bars': [array([ 0., nan]), array([ 0., nan])], 'p_mfs_bars': [array([ 0., inf]), array([ 0., inf])], 'p_l_bars': [array([ 0., nan]), array([ 0., nan])]}}\n"
+     ]
+    }
+   ],
    "source": [
     "sync.synchronize()"
    ]
