--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -63,7 +63,7 @@
     "import numpy as np\n",
     "import scipy as sp\n",
     "import ode\n",
-    "from sliding_window import *"
+    "from numerical_propagator import *"
    ]
   },
   {
