--- a/Mean_Field_Library_tests.ipynb
+++ b/Mean_Field_Library_tests.ipynb
@@ -227,7 +227,62 @@
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
     "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
-    "        return -1*self.Gamma*np.zeros(np.shape(u_vec))\n",
+    "        u_s = kwargs['u_0']\n",
+    "        state_dim = kwargs['state_dim']\n",
+    "        q_mf_dot = kwargs['q_mf_dot']\n",
+    "        q_s_dot = kwargs['q_s_dot']\n",
+    "        p_mf_dot = kwargs['p_mf_dot']\n",
+    "        q_mf = kwargs['q_mf']\n",
+    "        u_mf = kwargs['u_mf']\n",
+    "        qp_vec = kwargs['qp_vec']\n",
+    "        H_l_D = kwargs['H_l_D']\n",
+    "        q_s = qp_vec[:state_dim]\n",
+    "        p_l = qp_vec[state_dim:2*state_dim]\n",
+    "        p_mf = qp_vec[2*state_dim:]\n",
+    "\n",
+    "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
+    "            Beta_mf=[]\n",
+    "            Beta_l=[]\n",
+    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
+    "            H_l_u = self.H_l_u(q_s, p_l)\n",
+    "            lambda_l=0\n",
+    "            j=j-1 # indices start at 0 but control indices start at 1\n",
+    "            for k in range(len(self.control_indices)):\n",
+    "                Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
+    "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
+    "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_mf_dot)) + \\\n",
+    "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_mf_dot))\n",
+    "                    \n",
+    "                Beta_mf.append(Beta_mf_k)\n",
+    "                Beta_l.append(Beta_l_k)\n",
+    "            return Beta_mf, Beta_l\n",
+    "                \n",
+    "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j):\n",
+    "            alpha_mf = []\n",
+    "            alpha_l = []\n",
+    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
+    "            H_l_u = self.H_l_u(q_s, p_l)\n",
+    "            j=j-1\n",
+    "            H_mf_nou = self.H_MF_nou(q_mf, p_mf, u_mf)\n",
+    "            H_l_nou = self.H_l_nou(q_mf, p_mf, u_mf)\n",
+    "            for k in range(len(self.control_indices)):\n",
+    "                alpha_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +\\\n",
+    "                            (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
+    "\n",
+    "                alpha_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +\\\n",
+    "                            (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
+    "                alpha_mf.append(alpha_mf_k)\n",
+    "                alpha_l.append(alpha_l_k)\n",
+    "            return alpha_mf, alpha_l\n",
+    "                \n",
+    "        for j in self.control_indices:\n",
+    "            Beta_mf, Beta_l = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
+    "            alpha_mf, alpha_l = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
+    "\n",
+    "        print Beta_mf, Beta_l\n",
+    "        print alpha_mf, alpha_l\n",
+    "        return -1*self.Gamma*(self.gamma*(alpha_mf + np.dot(Beta_mf,u_s)) +\\\n",
+    "                              (1-self.gamma)*(alpha_l + np.dot(Beta_l,u_s)))\n",
     "    \n",
     "    ## Mean Field methods\n",
     "    def H_MF_nou(self, q_mf, p_mf, u_mf):\n",
@@ -3838,6 +3893,104 @@
       "[nan] [nan]\n",
       "[nan] [nan]\n",
       "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
+      "[nan] [nan]\n",
       "[nan] [nan]\n"
      ]
     },
@@ -3858,104 +4011,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
-      "[nan] [nan]\n",
       "[nan] [nan]\n",
       "[nan] [nan]\n",
       "[nan] [nan]\n",
