--- a/Mean_Field_Library_tests.ipynb
+++ b/Mean_Field_Library_tests.ipynb
@@ -265,11 +265,12 @@
     "            j=j-1\n",
     "            H_mf_nou = self.H_MF_nou(q_mf, p_mf, u_mf)\n",
     "            H_l_nou = self.H_l_nou(q_mf, p_mf, u_mf)\n",
+    "            lambda_l = 0\n",
     "            for k in range(len(self.control_indices)):\n",
-    "                alpha_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +\\\n",
+    "                alpha_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(p_mf, q_mf, u_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(p_mf, q_mf, u_mf), p_mf_dot)) +\\\n",
     "                            (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
     "\n",
-    "                alpha_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +\\\n",
+    "                alpha_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l)[k], p_l_dot)) +\\\n",
     "                            (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
     "                alpha_mf.append(alpha_mf_k)\n",
     "                alpha_l.append(alpha_l_k)\n",
@@ -543,22 +544,47 @@
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
+    "        Beta_mfs =[]\n",
+    "        Beta_ls=[]\n",
+    "        alpha_mfs=[]\n",
+    "        alpha_ls=[]\n",
+    "\n",
     "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
-    "            Beta_mf=[]\n",
-    "            Beta_l=[]\n",
-    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
-    "            H_l_u = self.H_l_u(q_s, p_l)\n",
-    "            lambda_l=0\n",
+    "            Beta_mf_j=[]\n",
+    "            Beta_l_j=[]\n",
+    "            H_mf_u = np.array([0]) # self.H_MF_u(q_mf, p_mf)\n",
+    "            H_l_u = np.array([0]) # self.H_l_u(q_s, p_l)\n",
+    "            lambda_l = 0\n",
     "            j=j-1 # indices start at 0 but control indices start at 1\n",
     "            for k in range(len(self.control_indices)):\n",
+    "                # recall self.q_rhs_H_mf_u() returns a 2D np.array of size control_dim x state_dim, so self.q_rhs_H_mf_u()[k] is actually a 1D np.array\n",
     "                Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
     "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
     "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_mf_dot)) + \\\n",
     "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_mf_dot))\n",
+    "\n",
+    "                Beta_mf_j.append(Beta_mf_k)\n",
+    "                Beta_l_j.append(Beta_l_k)\n",
+    "\n",
+    "            #TODO: should Beta_mf_j be an array? for when we take the dot product?\n",
+    "            return Beta_mf_j, Beta_l_j\n",
+    "        \n",
+    "#         def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
+    "#             Beta_mf=[]\n",
+    "#             Beta_l=[]\n",
+    "#             H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
+    "#             H_l_u = self.H_l_u(q_s, p_l)\n",
+    "#             lambda_l=0\n",
+    "#             j=j-1 # indices start at 0 but control indices start at 1\n",
+    "#             for k in range(len(self.control_indices)):\n",
+    "#                 Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
+    "#                             H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
+    "#                 Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_mf_dot)) + \\\n",
+    "#                            H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_mf_dot))\n",
     "                    \n",
-    "                Beta_mf.append(Beta_mf_k)\n",
-    "                Beta_l.append(Beta_l_k)\n",
-    "            return Beta_mf, Beta_l\n",
+    "#                 Beta_mf.append(Beta_mf_k)\n",
+    "#                 Beta_l.append(Beta_l_k)\n",
+    "#             return Beta_mf, Beta_l\n",
     "                \n",
     "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j):\n",
     "            alpha_mf = []\n",
@@ -568,22 +594,31 @@
     "            j=j-1\n",
     "            H_mf_nou = self.H_MF_nou(q_mf, p_mf, u_mf)\n",
     "            H_l_nou = self.H_l_nou(q_mf, p_mf, u_mf)\n",
-    "            for k in range(len(self.control_indices)):\n",
-    "                alpha_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +\\\n",
+    "            lambda_l=0\n",
+    "            alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(p_mf, q_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(p_mf, q_mf), p_mf_dot)) +\\\n",
     "                            (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
     "\n",
-    "                alpha_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +\\\n",
+    "            alpha_l_j = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l), q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l, lambda_l), p_l_dot)) +\\\n",
     "                            (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-    "                alpha_mf.append(alpha_mf_k)\n",
-    "                alpha_l.append(alpha_l_k)\n",
-    "            return alpha_mf, alpha_l\n",
-    "                \n",
-    "        for j in self.control_indices:\n",
-    "            Beta_mf, Beta_l = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
-    "            alpha_mf, alpha_l = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
     "\n",
-    "        return -1*self.Gamma*(self.gamma*(alpha_mf + np.dot(Beta_mf,u_s)) +\\\n",
-    "                              (1-self.gamma)*(alpha_l + np.dot(Beta_l,u_s)))\n",
+    "            return alpha_mf_j, alpha_l_j\n",
+    "        \n",
+    "        u_s_dot = np.array([])\n",
+    "        for j in self.control_indices:\n",
+    "            '''for each control, we need to:\n",
+    "                1) Compute and get a 1D np.array for each of alpha_l_j, etc.\n",
+    "                2) Compute u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
+    "                3) Concatenate all of the u_s_dot_j to construct u_s_dot in a 1D np.array\n",
+    "            '''\n",
+    "            \n",
+    "            Beta_mf_j, Beta_l_j = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
+    "            alpha_mf_j, alpha_l_j = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
+    "            # Beta_mf_j, Beta_l_j should be vectors\n",
+    "            # alpha_mf_j, alpha_l_j should be scalars\n",
+    "            u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
+    "            u_s_dot=np.concatenate([u_s_dot, np.array([u_s_dot_j])])\n",
+    "        \n",
+    "        return u_s_dot\n",
     "\n",
     "\n",
     "    ## Mean Field methods\n",
@@ -681,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -696,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -708,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -719,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -734,7 +769,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -759,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -789,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -823,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -861,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -876,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -906,35 +941,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# write helper function to take in sliding window, and q_p_u_dict, and return the q_s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('1', 0), ('2', 2)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q_p_u_dict['q_s'].items()"
    ]
   },
   {
@@ -947,10 +960,32 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0])"
+       "[('1', 0), ('2', 2)]"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_p_u_dict['q_s'].items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -972,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -992,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1000,10 +1035,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0])"
+       "array([0.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1025,8 +1060,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:255: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:238: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:290: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:273: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n",
@@ -1043,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1055,35 +1090,13 @@
        "       0.00000000e+00,            inf, 1.79437304e+95])"
       ]
      },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qpu_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0., nan])"
-      ]
-     },
      "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q_ls_bar"
+    "qpu_vec"
    ]
   },
   {
@@ -1096,7 +1109,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0., inf])"
+       "array([ 0., nan])"
       ]
      },
      "execution_count": 24,
@@ -1105,7 +1118,7 @@
     }
    ],
    "source": [
-    "p_mfs_dot_bar"
+    "q_ls_bar"
    ]
   },
   {
@@ -1118,10 +1131,32 @@
     {
      "data": {
       "text/plain": [
-       "[1]"
+       "array([ 0., inf])"
       ]
      },
      "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_mfs_dot_bar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1150,7 +1185,7 @@
        "7"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1173,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1184,7 +1219,7 @@
        "array([0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -1219,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
